force-app/main/default/objects/Case_Recordings__c/Case_Recordings__c.object-meta.xml
<CustomObject>
    <label>Case Recordings</label>
    <nameField>
        <displayFormat>CRN-{yy}{mm}{dd}{00}</displayFormat>
        <label>CR No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Recordings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>