force-app/main/default/objects/Case_Recordings__c/fields/Case_File_No__c.field-meta.xml
<CustomField>
    <fullName>Case_File_No__c</fullName>
    <label>Case File No.</label>
    <referenceTo>Case_File__c</referenceTo>
    <relationshipLabel>Case Recordings</relationshipLabel>
    <relationshipName>Case_Recordings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>