force-app/main/default/objects/Case_Recordings__c/fields/Client_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Client_Behaviour__c</fullName>
    <label>Client Behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5-Excellent</fullName>
            </value>
            <value>
                <fullName>4-Very good</fullName>
            </value>
            <value>
                <fullName>3-Good</fullName>
            </value>
            <value>
                <fullName>2-Poor</fullName>
            </value>
            <value>
                <fullName>1-Very poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>