force-app/main/default/objects/Case_Recordings__c/fields/Client_Behaviour_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Client_Behaviour_Remarks__c</fullName>
    <inlineHelpText>Please provide additional descriptive information if any</inlineHelpText>
    <label>Client Behaviour Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>