force-app/main/default/objects/Case_Recordings__c/fields/Client_Emotion__c.field-meta.xml
<CustomField>
    <fullName>Client_Emotion__c</fullName>
    <label>Client Emotion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5-Very stable</fullName>
            </value>
            <value>
                <fullName>4-Quite stable</fullName>
            </value>
            <value>
                <fullName>3-Stable</fullName>
            </value>
            <value>
                <fullName>2-Quite stable</fullName>
            </value>
            <value>
                <fullName>1-Not stable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>