force-app/main/default/objects/Case_Recordings__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Recordings</relationshipLabel>
    <relationshipName>Case_Recordings</relationshipName>
    <type>Lookup</type>
</CustomField>