force-app/main/default/objects/Case_Recordings__c/fields/Date_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Date_Recorded__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date Recorded</label>
    <type>Date</type>
</CustomField>