force-app/main/default/objects/Case_Recordings__c/fields/Engagement_Level__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Level__c</fullName>
    <label>Engagement Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5-Very engaged</fullName>
            </value>
            <value>
                <fullName>4-Quite engaged</fullName>
            </value>
            <value>
                <fullName>3-Engaged</fullName>
            </value>
            <value>
                <fullName>2-Quite disengaged</fullName>
            </value>
            <value>
                <fullName>1-Not engaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>