force-app/main/default/objects/Case_Recordings__c/fields/Engagement_Level_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Level_Remarks__c</fullName>
    <inlineHelpText>Please provide additional descriptive information if any</inlineHelpText>
    <label>Engagement Level Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>