force-app/main/default/objects/Case_Recordings__c/fields/General_Remarks__c.field-meta.xml
<CustomField>
    <fullName>General_Remarks__c</fullName>
    <inlineHelpText>Please provide additional descriptive information if any including any pictures</inlineHelpText>
    <label>General Remarks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>