force-app/main/default/objects/Case_Recordings__c/fields/Homework__c.field-meta.xml
<CustomField>
    <fullName>Homework__c</fullName>
    <inlineHelpText>Please provide additional descriptive information if any including pictures</inlineHelpText>
    <label>Homework</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>