force-app/main/default/objects/Case_Recordings__c/fields/Intervention_Method__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Method__c</fullName>
    <inlineHelpText>Give a description of the intervention method employed</inlineHelpText>
    <label>Intervention Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>