force-app/main/default/objects/Case_Recordings__c/fields/Next_Session_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Session_Date_Time__c</fullName>
    <label>Next Session Date/Time</label>
    <type>DateTime</type>
</CustomField>