force-app/main/default/objects/Case_Recordings__c/fields/Objectives_Met__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Met__c</fullName>
    <label>Objectives Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>