force-app/main/default/objects/Case_Recordings__c/fields/Person_Involved__c.field-meta.xml
<CustomField>
    <fullName>Person_Involved__c</fullName>
    <label>Person Involved</label>
    <length>200</length>
    <type>Text</type>
</CustomField>