force-app/main/default/objects/Case_Recordings__c/fields/Personal_Reflection__c.field-meta.xml
<CustomField>
    <fullName>Personal_Reflection__c</fullName>
    <label>Personal Reflection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>