force-app/main/default/objects/Case_Recordings__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>