force-app/main/default/objects/Case_Recordings__c/fields/Session_Details__c.field-meta.xml
<CustomField>
    <fullName>Session_Details__c</fullName>
    <inlineHelpText>Please describe your session details here</inlineHelpText>
    <label>Session Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>