force-app/main/default/objects/Case_Recordings__c/recordTypes/CS_Issues.recordType-meta.xml
<RecordType>
    <fullName>CS_Issues</fullName>
    <active>true</active>
    <description>This record type is used for CS case recording notes</description>
    <label>CS - Issues</label>
</RecordType>