force-app/main/default/objects/Case_Recordings__c/recordTypes/ISS_Case_Recording.recordType-meta.xml
<RecordType>
    <fullName>ISS_Case_Recording</fullName>
    <active>true</active>
    <description>This is used for ISS case recording notes</description>
    <label>ISS Case Recording</label>
</RecordType>